# marginPhase

./: .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE.txt  Makefile  README  README.md  combinedmodel.c  include.mk  linhapexample.c  margin.c  marginPhase.c  marginPolish.c  params.json  params_nanopore.json  params_pacbio_gaps.json  params_pacbio_no_gaps.json  plan.txt  vcfCompare.c
docker/: Dockerfile  Makefile  wrapper.sh
externalTools/ssw/: ssw.c  ssw.h
impl/: bubbleGraph.c  callConsensus.c  chunker.c  column.c  coordination.c  emissions.c  externalIntegration.c  genomeFragment.c  helenFeatures.c  hmm.c  htsIntegration.c  mergeColumn.c  outputWriter.c  pairwiseAligner.c  pairwiseAlignments.c  parser.c  partitions.c  polisher.c  profileSeq.c  randomSequences.c  referencePriorProbs.c  samWriter.c  stRPHmm.c  stateMachine.c  vcfComparison.c  vcfTools.c  vcfWriter.c  vcftohapman.c  view.c
inc/: callConsensus.h  helenFeatures.h  htsIntegration.h  margin.h  marginVersion.h.in  margin_phase_version.h  pairwiseAligner.h  randomSequences.h  stParser.h  stPolish.h  stRPHmm.h  stView.h  stateMachine.h  vcfComparison.h  vcftohapman.h
params/: allParams.np.bacteria.guppy-ff-305.json  allParams.np.ecoli.json  allParams.np.human.guppy-ff-233.json  allParams.np.human.guppy-ff-235.json  allParams.np.human.guppy-ff-305.json  allParams.np.human.json  allParams.np.human.r94-g233.json  allParams.np.human.r94-g235.json  allParams.np.human.r94-g305.json  allParams.np.human.r94-g305.merge_template.json  allParams.np.json  allParams.np.microbial.r10-g01a.json  allParams.np.microbial.r10pcr-dev.json  allParams.np.microbial.r94-g305.json  allParams.np.microbial.r94-g344.json  allParams.np.no_rle.json  allParams.np.rle_mode.json  params.nanopore.gap.json  params.nanopore.json  params.pacbio.gap.json  params.pacbio.json
params/polish/: log_prob_matrices_fasta_one_liners_2x_pseudocounts.txt  polishParams.json  threeStateNanopore.hmm
scripts/: assembly_experiment.py  calculate_repeat_emissions.py  compareHets.py  dirty_assembly_compare.py  fasta_split.py  microbeRegionsTest.sh  mungeSubstitutionCounts.py  munge_repeat_matrix.py  phaseRegionTestMultiple.sh  phaseRegionsTest.sh  phaseTest.sh
tests/: 5kbtest.bam  5kbtest.sam  HG001.GRCh37.chr3.100kb.vcf  HG001.GRCh37.chr3.2mb.vcf  NA12878.PG.chr3.100kb.4.vcf  NA12878.PG.chr3.2mb.vcf  NA12878.ihs.chr3.100kb.0.bam  NA12878.ihs.chr3.100kb.1.bam  NA12878.ihs.chr3.100kb.1.bam.bai  NA12878.ihs.chr3.100kb.2.bam  NA12878.ihs.chr3.100kb.2.bam.bai  NA12878.ihs.chr3.100kb.3.bam  NA12878.ihs.chr3.100kb.3.bam.bai  NA12878.ihs.chr3.100kb.4.bam  NA12878.ihs.chr3.100kb.4.bam.bai  NA12878.np.chr3.100kb.0.bam  NA12878.np.chr3.100kb.1.bam  NA12878.np.chr3.100kb.2.bam  NA12878.np.chr3.100kb.2.bam.bai  NA12878.np.chr3.100kb.3.bam  NA12878.np.chr3.100kb.4.bam.bai  NA12878.pb.chr3.100kb.0.bam  NA12878.pb.chr3.100kb.3.bam  NA12878.pb.chr3.100kb.4.bam  NA12878.pb.chr3.100kb.4.bam.bai  NA12878.pb.chr3.100kb.fa  NA12878.pb.chr3.5kb.bam  NA12878.pb.chr3.5kb.sam  NA12878.pb1.chr3.1mb.bam.bai  allNA12878pbFiles.txt  allTests.c  callConsensusTest.c  chunkingTest.bam  chunkingTest.bam.bai  chunkingTest.c  chunkingTest.sam  featureTest.c  hg19.chr3.100kb.fa.fai  linhapexample.c  linhapsinglespeed.c  (+14 more)
tests/data/: NA12878.PG.chr3.100kb.0.vcf  NA12878.PG.chr3.100kb.1.vcf  NA12878.PG.chr3.100kb.2.vcf  NA12878.np.chr3.100kb.0.bam.bai  NA12878.np.chr3.100kb.3.bam.bai  NA12878.np.chr3.5kb.bam.bai  NA12878.pb.chr3.100kb.0.bam.bai  NA12878.pb.chr3.100kb.2.bam.bai  NA12878.pb.chr3.100kb.3.bam.bai  NA12878.pb.chr3.5kb.bam.bai  chunkingTest.bam  chunkingTest.bam.bai  chunkingTest.sam  featureTest.bam  featureTest.fa  featureTest.sam  featureTestTruth.bam  featureTestTruth.bam.bai  featureTestTruth.sam  parsingTest.allParams.json
tests/data/NA12878.pb.chr3.5kb/: 03d0148c_126725_4835.tsv  04133d7d_68610_1434.tsv  059c3d18_63262_4100.tsv  10824bb8_10331_0.tsv  10824bb8_10331_1110.tsv  10824bb8_10331_6441.tsv  113946b4_70099_14712.tsv  1246dc9f_21731_0.tsv  1458f166_40993_10268.tsv  15e9d886_69742_2859.tsv  16f0d844_70878_5361.tsv  17f5ac9c_24596_2062.tsv  1930e04c_4881_517.tsv  1e04bcbd_143685_0.tsv  1ea0b5fa_113460_756.tsv  1ea4239d_56424_0.tsv  1fa8b5c3_46529_0.tsv  2bbdbfc2_33387_11212.tsv  2bbdbfc2_33387_9836.tsv  3a6cb2ed_110219_0.tsv  3a6cb2ed_38996_0.tsv  3a8ab185_149405_17435.tsv  3a8ab185_149405_21974.tsv  3a8ab185_76825_2008.tsv  3b6964d2_25807_6906.tsv  3ba17513_51554_4725.tsv  3c78f563_75720_0.tsv  3cfc0a15_145249_737.tsv  3cfc0a15_59048_0.tsv  3d6bf793_103925_0.tsv  3d6bf793_114809_0.tsv  3d6bf793_114809_10627.tsv  3db1ec9d_30154_4635.tsv  3db1ec9d_30154_6219.tsv  3db1ec9d_30154_7821.tsv  400a5c06_68400_4488.tsv  4552c0c5_69959_2697.tsv  4552c0c5_69959_5453.tsv  4582dec1_16104_14245.tsv  4582dec1_16104_4909.tsv  (+102 more)
tests/data/featureTest/: featureTest.bam.bai  featureTestTruth.sam
tests/data/largeGapTest/: largeGapTest.bam  largeGapTest.bam.bai  largeGapTest.sam  largeGapTest2.bam  largeGapTest2.bam.bai  largeGapTest2.sam
tests/data/parsingTest/: parsingTest.json
tests/data/realData/: NA12878.PG.chr3.100kb.3.vcf  NA12878.np.chr3.100kb.1.bam.bai  NA12878.np.chr3.100kb.4.bam  NA12878.np.chr3.5kb.bam  NA12878.pb.chr3.100kb.1.bam  NA12878.pb.chr3.100kb.1.bam.bai  hg19.chr3.9mb.fa.fai
tests/polishTestExamples/200_random_windows_chr1_celegans_guppy/: 0.fasta  0.ref.fasta  1.fasta  1.ref.fasta  10.fasta  10.ref.fasta  100.fasta  100.ref.fasta  101.fasta  101.ref.fasta  102.fasta  102.ref.fasta  103.fasta  103.ref.fasta  104.fasta  104.ref.fasta  105.fasta  105.ref.fasta  106.fasta  106.ref.fasta  107.fasta  107.ref.fasta  108.fasta  108.ref.fasta  109.fasta  109.ref.fasta  11.fasta  11.ref.fasta  110.fasta  110.ref.fasta  (+370 more)
tests/shasta_diploid/: README  shasta_phasing_test.align.bam.bai  shasta_phasing_test.ref.fasta  shasta_phasing_test.truth.fa  shasta_phasing_train.align.bam.bai  shasta_phasing_train.ref.fasta  shasta_phasing_train.truth.fa
toil/: Makefile  README.md  TOIL_SCRIPT.txt  setup.py  version.py
toil/docker/: Dockerfile  Makefile  test.py  wrapper.sh
(+1197 files in other folders)
